# BinPickingSim

./: .gitignore  README.md  gz_ray_label_plugin.cc  run.sh
devel/: .catkin  .rosinstall
devel/include/gz_dynamic_colors/: DColor.h
devel/include/gz_freeze_objects/: FreezeModels.h
devel/include/gz_ray_label_plugin/: LabelPoint.h  LabelPoints.h
devel/lib/aruco_broadcaster/: aruco_broadcaster
devel/lib/aruco_ros/: double  marker_publisher  single
devel/lib/contact_republisher/: contact_republisher_node
devel/lib/gazebo_sensors_tutorial/: aruco_frames_detection
devel/lib/pkgconfig/: aruco.pc  aruco_broadcaster.pc  aruco_msgs.pc  aruco_ros.pc  binpacking.pc  contact_republisher.pc  gazebo_sensors_tutorial.pc  gz_dynamic_colors.pc  gz_freeze_objects.pc  gz_ray_label_plugin.pc  mastering_ros_robot_description_pkg.pc  rrbot_control.pc  rrbot_description.pc  rrbot_gazebo.pc  seven_dof_arm_gazebo.pc
install/: local_setup.sh  setup.sh
install/include/aruco_ros/: ArucoThresholdConfig.h
install/include/binpacking/: LabelPoint.h  LabelPoints.h
install/include/contact_republisher/: contacts_msg.h
install/include/gz_ray_label_plugin/: LabelPoint.h  LabelPoints.h
install/lib/aruco_ros/: double  marker_publisher  single
install/lib/pkgconfig/: aruco.pc  aruco_broadcaster.pc  aruco_msgs.pc  binpacking.pc  contact_republisher.pc  (+4 more)
src/binpacking/: CMakeLists.txt  package.xml
src/gz_dynamic_colors/: CMakeLists.txt
src/gz_dynamic_colors/src/: gz_dynamic_colors.cc
src/gz_freeze_objects/: CMakeLists.txt
src/gz_ray_label_plugin/: CMakeLists.txt
(+154 files in other folders)
